--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -2,6 +2,12 @@
 name = "sgs-bacen-examples"
 version = "0.1.0"
 edition = "2021"
+authors = [ "Felipe Noronha <felipenoris@gmail.com>" ]
+license = "MIT"
+description = "A SOAP client for Brazilian Central Bank's Time Series Management System <https://www3.bcb.gov.br/sgspub>"
+homepage = "https://github.com/felipenoris/sgs-bacen-rs"
+repository = "https://github.com/felipenoris/sgs-bacen-rs"
+readme = "../README.md"
 
 [dependencies]
 sgslib = { version = "0.1", path = "../sgslib" }
