--- a/sgscli/Cargo.toml
+++ b/sgscli/Cargo.toml
@@ -13,6 +13,7 @@ readme = "../README.md"
 sgslib = { version="0.1", path = "../sgslib" }
 clap = { version = "3.1.12", features = ["derive"] }
 tokio = { version = "1", features = ["full"] }
+chrono = "0.4"
 
 [[bin]]
 name = "sgs"
