refactoring SGSJulia -> SGS.jl . refactoring ptr_into_client_ref.

--- a/examples/julia_ffi_example/SGS.jl/Project.toml
+++ b/examples/julia_ffi_example/SGS.jl/Project.toml
@@ -1,4 +1,4 @@
-name = "SGSJulia"
+name = "SGS"
 uuid = "27e31371-8aac-4dc6-809d-3b35fcfa1bcf"
 authors = ["Felipe Noronha <felipenoris@gmail.com>"]
 version = "0.1.0"
