--- a/examples/julia_ffi_example/SGS.jl/Project.toml
+++ b/examples/julia_ffi_example/SGS.jl/Project.toml
@@ -4,6 +4,7 @@ authors = ["Felipe Noronha <felipenoris@gmail.com>"]
 version = "0.1.0"
 
 [deps]
+Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 Libdl = "8f399da3-3557-5675-b5ff-fb832c97cbdb"
 
 [extras]
