--- a/examples/c_example/Makefile
+++ b/examples/c_example/Makefile
@@ -4,7 +4,7 @@ SGS_INCLUDE_PATH=../../ffi/include
 LDLIBS=-L$(SGS_LIB_PATH) -lsgs
 CFLAGS = -g -Wall -O3 -I$(SGS_INCLUDE_PATH)
 CC=gcc
-P=sgs_example
+PROGRAM=sgs_example
 OBJECTS=
 
-$(P): $(OBJECTS)
+$(PROGRAM): $(OBJECTS)
